test/error/prop_unterminated_quote.htest
#!/usr/bin/env hashdot
#.name = "${pvalue"

